@@ -1,3 +1,9 @@
+2005-08-11 14:06 Mike Park  <mike.park@nasa.gov>
+
+	* src/ring.c (addTriangle) store original segments when first
+	triangle is added.
+	* src/ring.c (ringTecplot) dump original segments.
+
 2005-08-11 10:27 Mike Park  <mike.park@nasa.gov>
 
 	* src/ring.c (ringTecplot) dump segments, triangles, node ids.
